2016-03-24  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/62212
	* g++.dg/template/mangle2.C: New test.

2016-03-24  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/70396
	* gcc.dg/torture/pr70396.c: New testcase.

2016-03-24  Richard Biener  <rguenther@suse.de>

	PR middle-end/70370
	* gcc.dg/torture/pr70370.c: New testcase.

2016-03-24  Tom de Vries  <tom@codesourcery.com>

	* gfortran.dg/goacc/data-tree.f95: Add missing initialization.
	* gfortran.dg/goacc/kernels-tree.f95: Same.
	* gfortran.dg/goacc/parallel-tree.f95: Same.

2016-03-24  Tom de Vries  <tom@codesourcery.com>

	* c-c++-common/goacc/uninit-if-clause.c: New test.
	* gfortran.dg/goacc/uninit-if-clause.f95: New test.

2016-03-24  Jakub Jelinek  <jakub@redhat.com>

	PR target/70290
	* g++.dg/ext/pr70290.C: Add -Wno-psabi -w to dg-options.  Formatting.

2016-03-24  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/70372
	* gcc.dg/tree-ssa/pr70372.c: New testcase.

2016-03-23  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/70347
	* g++.dg/cpp1y/nsdmi-union1.C: New test.

2016-03-23  Patrick Palka  <ppalka@gcc.gnu.org>

	PR c++/70332
	* g++.dg/cpp1y/nsdmi-aggr5.C: New test.

2016-03-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/70001
	* g++.dg/cpp0x/constexpr-70001-4.C: New test.
	* g++.dg/cpp1y/pr70001.C: New test.

	PR c++/70323
	* g++.dg/cpp0x/constexpr-70323.C: New test.

2016-03-23  Alexandre Oliva  <aoliva@redhat.com>
	    Jason Merrill  <jason@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	PR c++/69315
	* g++.dg/cpp0x/constexpr-69315.C: New test.
	* g++.dg/cpp0x/variadic122.C: Change one dg-warning into dg-bogus.

2016-03-23  Marek Polacek  <polacek@redhat.com>

	PR c++/69884
	* g++.dg/warn/Wignored-attributes-1.C: New test.
	* g++.dg/warn/Wignored-attributes-2.C: New test.

2016-03-23  Tom de Vries  <tom@codesourcery.com>

	* c-c++-common/goacc/kernels-default.c (foo): Add missing
	initialization.
	* gfortran.dg/goacc/private-3.f95 (test): Same.